Closed
Bug 394772
Opened 18 years ago
Closed 18 years ago
Camino becomes unresponsive (exception loading favicon cache image)
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.6
People
(Reporter: salumbre, Assigned: stuart.morgan+bugzilla)
Details
(Keywords: fixed1.8.1.8, Whiteboard: [camino-1.5.2])
Attachments
(2 files)
|
39.51 KB,
text/plain
|
Details | |
|
898 bytes,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1.6) Gecko/20070725 Firefox/2.0.0.6
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1.6) Gecko/20070725 Firefox/2.0.0.6
Please be advised that Camino has become unresponsive in all my computers. At first I thought that my DSL was down, but Firefox and Safari connect fine. The first one or two tabs load OK, but the third starts loading indefinitely and never finishes, and from then on the program just does not work. Tried reinstalling; it didn't fix the issue. I am using Firefox for now, but Camino is my browser of choice, and I miss it.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Have you tried testing with a fresh profile? http://pimpmycamino.com/parts/troubleshoot-camino
Also, do you have a large number of (inactive) downloads in your downloads list?
| Reporter | ||
Comment 2•18 years ago
|
||
Hi,
Tried this. It works fine with a fresh profile. Then I restarted using my regular profile, and it's hanging as before, no response whatsoever.
The program itself works, I can access the menus and everything, it just does not connect,, or does it once or twice and then stops.
I have no downloads in my list, inactive or not. I have it set to remove items from list upon successful download.
| Assignee | ||
Comment 3•18 years ago
|
||
Please launch Camino with your normal profile, then download and run
http://escapedthoughts.com/camino/CaminoDiagnostics.zip
and attach the resulting file using the "Add an attachment" link above.
| Reporter | ||
Comment 4•18 years ago
|
||
As Stuart requested, I ran Camino Diagnostics, and here's the log. Hope we get somewhere from here.
| Assignee | ||
Comment 5•18 years ago
|
||
Hm, it looks like it's choking on reading an icon file (which has probably been damaged in some way). Could you try quitting Camino, moving ~/Library/Caches/Camino/IconCache, and see if Camino starts working correctly again?
Please don't throw that folder away though--if it is the problem, I'd like to have you test a build with a fix that would prevent this kind of problem from causing issues like you are seeing in the future.
| Reporter | ||
Comment 6•18 years ago
|
||
It seems that you're right on the money. I did what you asked, and it's working as snappily as it used to.
I put the folder on the desktop, so I can get to it easily.
Thanks for your help.
| Assignee | ||
Comment 7•18 years ago
|
||
Could you download
http://escapedthoughts.com/camino/Camino-394772.dmg
and put back your old cache folder, and see if that works correctly?
Thanks for going through all this debugging with us; it's extremely helpful.
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Reporter | ||
Comment 8•18 years ago
|
||
I have been using Camino again non-stop since it started working again, and it created a new IconCache folder. Should I replace it with the old one, or just add the contents of the old one to the new folder?
I'm delighted to be of help.
| Assignee | ||
Comment 9•18 years ago
|
||
Replace it entirely with the old one (after quitting Camino).
| Reporter | ||
Comment 10•18 years ago
|
||
Hi,
I'm reporting back. Camino has been working, although it is a little slower, and after a while it gets really bogged down, and one cannot move from tab to tab (I always have at least 3 tabs open.) Restarting seems to solve the issue, though.
| Assignee | ||
Comment 11•18 years ago
|
||
Assignee: nobody → stuart.morgan
Status: NEW → ASSIGNED
Attachment #280192 -
Flags: superreview?(mikepinkerton)
| Assignee | ||
Updated•18 years ago
|
Flags: camino1.5.2+
Summary: Camino becomes unresponsive → Camino becomes unresponsive (exception loading favicon cache image)
Comment 12•18 years ago
|
||
Comment on attachment 280192 [details] [diff] [review]
fix
sr=pink
Attachment #280192 -
Flags: superreview?(mikepinkerton) → superreview+
| Reporter | ||
Comment 13•18 years ago
|
||
I'm reporting back after a while. I have been receiving links that I do not understand from the group. I do not know if they are failed attachments or just technical comments.
One way or the other, I have had no more trouble with Camino. Works like a charm.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment 14•18 years ago
|
||
Felix, we determined that there *was* a bug here. The emails you're receiving are technical comments regarding the patch on this bug. Those emails should stop soon as we're close to landing this patch and fixing the underlying bug which caused you to have a problem. We'll resolve this bug as FIXED when that patch lands.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 15•18 years ago
|
||
Landed on trunk and MOZILLA_1_8_BRANCH, and on CAMINO_1_5_BRANCH (with old-style exception syntax) for 1.5.2.
Status: REOPENED → RESOLVED
Closed: 18 years ago → 18 years ago
Keywords: fixed1.8.1.8
Resolution: --- → FIXED
Target Milestone: --- → Camino1.6
Whiteboard: [camino-1.5.2]
You need to log in
before you can comment on or make changes to this bug.
Description
•