Camino only - Bug 394772: Catch exceptions loading damaged favicons from cache. r/sr=pink